<resources>
    <string name="app_name">ALC4 Phase 1</string>
    <string name="tv_welcome">Welcome to ALC 4.0</string>
    <string name="tv_about_alc">ABOUT ALC</string>
    <string name="tv_my_profile">MY PROFILE</string>
    <string name="progress_bar_message">Please Wait...Page is Loading...</string>
    <string name="about_alc_activity">About ALC</string>
    <string name="my_profile_activity">My Profile</string>
    <string name="tv_name">Musa Tondolo</string>
    <string name="tv_track">Track:      Android</string>
    <string name="country">Country:      Zambia</string>
    <string name="tv_email">Email:      mtondolo@gmail.com</string>
    <string name="tv_phone">Phone Number:      +260962212354</string>
    <string name="tv_slack">Slack Username:      @mtondolo</string>
</resources>
