<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/tv_welcome"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tv_about_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:padding="16dp"
        android:text="@string/tv_about_alc"
        android:textSize="24sp" />

    <Button
        android:id="@+id/tv_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/tv_my_profile"
        android:textSize="24sp" />

</LinearLayout>